Configure build environment for libxposed api 100 compatibility

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
 android.experimental.enableNewResourceShrinker.preciseShrinking=true
 android.enableAppCompileTimeRClass=true
 android.useAndroidX=true
+
+# 增加Gradle内存配置
+org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.caching=true
+
+# 强制使用支持C++20模块的CMake版本
+android.cmake.version=3.31.6
