--- a/patch-loader/src/main/jni/CMakeLists.txt
+++ b/patch-loader/src/main/jni/CMakeLists.txt
@@ -6,6 +6,10 @@ add_subdirectory(${CORE_ROOT} core)
 
 aux_source_directory(src SRC_LIST)
 aux_source_directory(src/jni SRC_LIST)
+aux_source_directory(src/Hook SRC_LIST)
+aux_source_directory(src/JniHook SRC_LIST)
+aux_source_directory(src/Utils SRC_LIST)
+
 set(SRC_LIST ${SRC_LIST} api/patch_main.cpp)
 
 add_library(${PROJECT_NAME} SHARED ${SRC_LIST})
