--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -34,6 +34,14 @@
             </intent-filter>
         </activity>
 
+        <receiver
+            android:name=".ui.util.InstallResultReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="${applicationId}.INSTALL_STATUS" />
+            </intent-filter>
+        </receiver>
+
         <service
             android:name=".manager.ModuleService"
             android:exported="true" />
