Improve compatibility with boot.oat in recent A15
See https://github.com/JingMatrix/LSPosed/pull/414 for details
Close #52 as fixed.

Also update few gradle dependencies.

--- a/gradle/lspatch.versions.toml
+++ b/gradle/lspatch.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-room = "2.7.2"
+room = "2.8.3"
 accompanist = "0.36.0"
 compose-destinations = "1.11.7"
 shizuku = "13.1.5"
 hiddenapi = "4.4.0"
-compose-bom = "2025.07.00"
-kotlin = "2.2.0"
-ksp = "2.2.0-2.0.2"
+compose-bom = "2025.11.00"
+kotlin = "2.2.21"
+ksp = "2.3.2"
 commons-io = "2.20.0"
 beust-jcommander = "1.82"
 google-gson = "2.13.1"
